<resources>
    <string name="app_name" translatable="false">Battery %</string>
    <string name="Speak">Say It!</string>

    <string name="NotCharging">Not Charging</string>
    <string name="Charging">Charging</string>
    <string name="BatteryLevel">\Battery Level  \n \</string>
    <string name="FullyCharged">Fully Charged</string>

    <!--    menu File-->
    <string name="AppTheme">App Theme</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="System">System Default</string>
    <string name="TTS">Text to Speech Settings</string>
    <string name="TTSExpanded">Opeen the Text to Speech Settings</string>
    <string name="Refresh">Refresh</string>

    <!--    Power Connected Announcement-->
    <string name="PowerConnected">Power Connected</string>
    <string name="PowerDisconnected">Power Disconnected </string>
</resources>
