<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/theme"
        android:title="@string/AppTheme">
        <menu>
            <item
                android:id="@+id/Light"
                android:icon="@drawable/lightmode"
                android:title="@string/Light"
                app:showAsAction="never" />

            <item
                android:id="@+id/Dark"
                android:icon="@drawable/darkmode"
                android:title="@string/Dark"
                app:showAsAction="never" />

            <item
                android:id="@+id/System"
                android:icon="@drawable/system"
                android:title="@string/System"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/tts"
        android:contentDescription="@string/TTSExpanded"
        android:icon="@drawable/tts"
        android:title="@string/TTS"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Refresh"
        android:checkable="true"
        android:icon="@drawable/refresh"
        android:title="@string/Refresh"
        app:showAsAction="ifRoom" />
</menu>
